Revert "Синхронизация конфигов - 5"
This reverts commit 7c1665464ca58306f858dec54afb4f1e60d6ba72.

--- a/gamedata/config/misc/dsh_rukzak.ltx
+++ b/gamedata/config/misc/dsh_rukzak.ltx
@@ -7,16 +7,16 @@ class   = II_ANTIR
 cform           = skeleton
 
 visual = equipments\item_rukzak.ogf
-description  = enc_item_treasure_desc
-inv_name   = item_treasure_name
-inv_name_short  = item_treasure_name_s
+description  = "Небольшой походный рюкзак. Сделан из прорезиненной ткани, поэтому не промокает. В таком можно хранить ценные вещи где-то в укромном месте - тайник получится отличный."
+inv_name   = "Небольшой рюкзак"
+inv_name_short  = "Небольшой рюкзак"
 
 inv_weight   = 1
 
 inv_grid_width  = 2
 inv_grid_height  = 2
-inv_grid_x		= 16	;59
-inv_grid_y		= 30	;39
+inv_grid_x   = 59
+inv_grid_y   = 39
 cost    = 1000
 
 ;eatable_item
