--- a/gamedata/config/misc/rx_weapon_mgr.ltx
+++ b/gamedata/config/misc/rx_weapon_mgr.ltx
@@ -148,8 +148,12 @@ wpn_bm16_full		= 5
 wpn_toz34			= 5
 wpn_wincheaster1300	= 6
 wpn_spas12			= 7
+wpn_saiga12c		= 8
+wpn_saiga12c_m1		= 8
+wpn_sayga12k_sk1	= 8
 
 wpn_mac10			= 4
+wpn_mac10_m1		= 4
 wpn_mp40			= 5
 wpn_mp5				= 6
 wpn_mp5_m1			= 6
@@ -179,6 +183,7 @@ wpn_awm				= 10
 wpn_swd				= 11
 wpn_gauss			= 11
 
+wpn_rpk74_sk1		= 12
 wpn_pkm				= 12
 wpn_m_134			= 12
 
