--- a/gamedata/config/misc/trade_barman.ltx
+++ b/gamedata/config/misc/trade_barman.ltx
@@ -85,10 +85,13 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		;NO TRADE
 wpn_spas12				;NO TRADE
+wpn_saiga12c			;NO TRADE
+wpn_sayga12k_sk1		;NO TRADE
 wpn_sg550sr_sk1         ;NO TRADE
 wpn_svu				    ;NO TRADE
 wpn_vintorez			;NO TRADE	  
 wpn_gauss			    ;NO TRADE
+wpn_rpk74_sk1			;NO TRADE
 wpn_pkm				   ;NO TRADE
 wpn_pkm_digger				   ;NO TRADE
 wpn_flame			    ;NO TRADE
@@ -219,7 +222,9 @@ wpn_eagle_m1			;NO TRADE
 wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
+wpn_saiga12c_m1		    ;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_mac10_m1			;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- ПОКУПКА ЕСЛИ МЫ ОБИДЕЛИ ДИГГЕРА -----------------------
@@ -359,6 +364,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				= 0.3,	0.1
 wpn_wincheaster1300		= 0.3,	0.1
 wpn_spas12				= 0.3,	0.1
+wpn_saiga12c			= 0.3,	0.1
+wpn_sayga12k_sk1		= 0.3,	0.1
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.1
@@ -368,6 +375,7 @@ wpn_gauss			    = 0.3,	0.1
 wpn_awm				    ;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.1
 wpn_pkm				    = 0.3,	0.1
 
 ;Другое
@@ -485,7 +493,9 @@ wpn_eagle_m1			= 1,	0.5
 wpn_colt_m1				= 1,	0.5
 wpn_mp5_m2				= 1,	0.5
 wpn_sig_m2				= 1,	0.5
+wpn_saiga12c_m1		    = 1,	0.5
 wpn_m_134				= 1,	0.5
+wpn_mac10_m1			= 1,	0.5
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -644,6 +654,9 @@ wpn_pb				= 1,	5
 wpn_pkm				= 1,	5
 wpn_ppsh41		= 1,	4
 wpn_rpg7			= 1,	5
+wpn_rpk74_sk1		= 1,	5
+wpn_saiga12c		= 1,	5
+wpn_sayga12k_sk1	= 1,	5
 wpn_sig550			= 1,	5
 wpn_spas12			= 1,	5
 wpn_svu				= 1,	5
