--- a/gamedata/config/misc/trade_pri.ltx
+++ b/gamedata/config/misc/trade_pri.ltx
@@ -144,6 +144,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		= 0.3,	0.1
 wpn_spas12				= 0.3,	0.1
+wpn_saiga12c			= 0.3,	0.1
+wpn_sayga12k_sk1		= 0.3,	0.1
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.1
@@ -153,6 +155,7 @@ wpn_gauss			    = 0.3,	0.1
 wpn_awm				    = 0.3,	0.1
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.1
 wpn_pkm				    = 0.3,	0.1
 
 ;Другое
@@ -268,7 +271,9 @@ wpn_eagle_m1			= 1.1,	0.5
 wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
+wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1,	0.5
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -281,6 +286,7 @@ af_mine				= 7,	0.8
 grenade_f1			= 6,	1
 wpn_fn2000			= 1,	0.7
 wpn_gauss			= 1,	0.6
+wpn_saiga12c		= 1,	0.8
 wpn_crossbow		= 1,	0.6
 wpn_awm		        = 1,	0.7
 
@@ -407,6 +413,9 @@ wpn_pb				= 1,	4
 wpn_pkm				= 1,	4
 wpn_ppsh41		= 1,	4
 wpn_rpg7			= 1,	4
+wpn_rpk74_sk1		= 1,	4
+wpn_saiga12c		= 1,	4
+wpn_sayga12k_sk1	= 1,	4
 wpn_sig550			= 1,	4
 wpn_spas12			= 1,	4
 wpn_svu				= 1,	4
