--- a/gamedata/config/misc/trade_unic.ltx
+++ b/gamedata/config/misc/trade_unic.ltx
@@ -232,7 +232,9 @@ wpn_eagle_m1		;NO TRADE
 wpn_colt_m1			;NO TRADE
 wpn_mp5_m2			;NO TRADE
 wpn_sig_m2			;NO TRADE
+wpn_saiga12c_m1		;NO TRADE
 wpn_m_134			;NO TRADE
+wpn_mac10_m1		;NO TRADE
 wpn_vintorez_m1		;NO TRADE
 
 ;#####-ARENA-#####
