--- a/gamedata/config/misc/items_of_tr_man.ltx
+++ b/gamedata/config/misc/items_of_tr_man.ltx
@@ -523,7 +523,7 @@ other = medkit, grenade_rgd5, antirad, explosive_tank, yod
 
 [l03_agroprom_data]
 arts = af_gravi, af_vyvert, af_fireball, af_mincer_meat, af_electra_flash, af_ameba_slug, af_rusty_kristall
-weapons = wpn_mac10, wpn_ak74n_ak74n30_ironsight, wpn_m16a1_sk1, wpn_akm_akm30_ironsight
+weapons = wpn_mac10, wpn_sayga12k_sk1, wpn_saiga12c, wpn_ak74n_ak74n30_ironsight, wpn_m16a1_sk1, wpn_akm_akm30_ironsight
 outfits = stalker_outfit, dolg_outfit, killer_outfit, monolit_outfit, ecolog_outfit
 ammo = ammo_9x18_pmm, ammo_12x76_zhekan, ammo_11.43x23_hydro, ammo_11.43x23_fmj, ammo_5.45x39_ap, ammo_5.45x39_fmj, ammo_5.56x45_ss190, ammo_5.56x45_ap, ammo_7.62x39_fmj, ammo_7.62x39_ap
 devices = detector_mine_finder
@@ -550,7 +550,7 @@ other = medkit_scientic, af_mine, grenade_f1, explosive_tank, repair_kit, ammo_v
 [l06_rostok_data]:l05_bar_data
 
 [l07_military_data]:l05_bar_data
-weapons = wpn_spas12, wpn_vintorez, wpn_sg550sr_sk1, wpn_fn2000, wpn_pkm, wpn_awm, wpn_gauss, wpn_swd_svd10_pso1
+weapons = wpn_spas12, wpn_rpk74_sk1, wpn_vintorez, wpn_sg550sr_sk1, wpn_fn2000, wpn_pkm, wpn_awm, wpn_gauss, wpn_swd_svd10_pso1
 outfits = bandit_plash_m1, military_outfit, svoboda_heavy_outfit, exo1
 ammo = ammo_11.43x23_hydro, ammo_11.43x23_fmj, ammo_5.45x39_ap, ammo_5.45x39_fmj, ammo_5.56x45_ss190, ammo_5.56x45_ap, ammo_7.62x39_fmj, ammo_7.62x39_ap, ammo_9x39_ap, ammo_9x39_pab9, ammo_7.62x54_7h14, ammo_7.62x54_7h1, ammo_7.62x54_ap, ammo_og-7b, ammo_arbolt, ammo_gauss, ammo_8.6x70_lm
 devices = interactive_detector_elite, repair_kit
