--- a/gamedata/config/misc/trade_billy.ltx
+++ b/gamedata/config/misc/trade_billy.ltx
@@ -102,6 +102,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				= 0.3,	0.7
 wpn_wincheaster1300		= 0.3,	0.7
 wpn_spas12				= 0.3,	0.7
+wpn_saiga12c			= 0.3,	0.7
+wpn_sayga12k_sk1		= 0.3,	0.7
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.7
@@ -111,6 +113,7 @@ wpn_gauss			    = 1.0,	1.7
 wpn_awm				    ;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.7
 wpn_pkm				    = 0.3,	0.7
 
 ;Другое
@@ -228,7 +231,9 @@ wpn_eagle_m1			= 1,	2.0
 wpn_colt_m1				= 1,	2.0
 wpn_mp5_m2				= 1,	2.0
 wpn_sig_m2				= 1,	2.0
+wpn_saiga12c_m1		    = 1,	2.0
 wpn_m_134				= 1,	2.0
+wpn_mac10_m1			= 1,	2.0
 wpn_vintorez_m1			;NO TRADE
 
 [billy_normal_buy]:unic_buy, weapons_buy_billy
@@ -326,6 +331,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				= 0.3,	0.7
 wpn_wincheaster1300		= 0.3,	0.7
 wpn_spas12				= 0.3,	0.7
+wpn_saiga12c			= 0.3,	0.7
+wpn_sayga12k_sk1		= 0.3,	0.7
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.7
@@ -335,6 +342,7 @@ wpn_gauss			    = 1.0,	1.7
 wpn_awm					= 0.3,	0.7
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.7
 wpn_pkm				    = 0.3,	0.7
 
 ;Другое
@@ -452,7 +460,9 @@ wpn_eagle_m1			= 1,	2.0
 wpn_colt_m1				= 1,	2.0
 wpn_mp5_m2				= 1,	2.0
 wpn_sig_m2				= 1,	2.0
+wpn_saiga12c_m1		    = 1,	2.0
 wpn_m_134				= 1,	2.0
+wpn_mac10_m1			= 1,	2.0
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -616,6 +626,9 @@ wpn_pb				= 1,	5
 wpn_pkm				= 1,	5
 wpn_ppsh41		= 1,	4
 wpn_rpg7			= 1,	5
+wpn_rpk74_sk1		= 1,	5
+wpn_saiga12c		= 1,	5
+wpn_sayga12k_sk1	= 1,	5
 wpn_sig550			= 1,	5
 wpn_spas12			= 1,	5
 wpn_svu				= 1,	5
@@ -765,6 +778,9 @@ wpn_pb				= 1,	3
 wpn_pkm				= 1,	3
 wpn_ppsh41		= 1,	2
 wpn_rpg7			= 1,	3
+wpn_rpk74_sk1		= 1,	3
+wpn_saiga12c		= 1,	3
+wpn_sayga12k_sk1	= 1,	3
 wpn_sig550			= 1,	3
 wpn_spas12			= 1,	3
 wpn_svu				= 1,	3
