--- a/gamedata/config/misc/trade_ecolog.ltx
+++ b/gamedata/config/misc/trade_ecolog.ltx
@@ -79,6 +79,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		;NO TRADE
 wpn_spas12				;NO TRADE
+wpn_saiga12c			;NO TRADE
+wpn_sayga12k_sk1		;NO TRADE
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         ;NO TRADE
@@ -88,6 +90,7 @@ wpn_gauss			    ;NO TRADE
 wpn_awm				    ;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			;NO TRADE
 wpn_pkm				    ;NO TRADE
 
 ;Другое
@@ -214,7 +217,9 @@ wpn_eagle_m1			;NO TRADE
 wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
+wpn_saiga12c_m1		    ;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_mac10_m1			;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -359,6 +364,9 @@ wpn_pb					= 1,	5
 wpn_pkm					= 1,	5
 wpn_ppsh41			= 1,	5
 wpn_rpg7				= 1,	5
+wpn_rpk74_sk1			= 1,	5
+wpn_saiga12c			= 1,	5
+wpn_sayga12k_sk1	= 1,	5
 wpn_sig550				= 1,	5
 wpn_spas12				= 1,	5
 wpn_svu					= 1,	5
