--- a/gamedata/config/misc/trade_freedom.ltx
+++ b/gamedata/config/misc/trade_freedom.ltx
@@ -147,6 +147,8 @@ wpn_toz34_short			= 0.3,	0.1
 wpn_toz34				= 0.3,	0.1
 wpn_wincheaster1300		= 0.3,	0.1
 wpn_spas12				= 0.3,	0.1
+wpn_saiga12c			= 0.3,	0.1
+wpn_sayga12k_sk1		= 0.3,	0.1
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.1
@@ -156,6 +158,7 @@ wpn_gauss			    = 0.3,	0.1
 wpn_awm				    ;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.1
 wpn_pkm				    = 0.3,	0.1
 
 ;Другое
@@ -272,7 +275,9 @@ wpn_eagle_m1			= 1.1,	0.5
 wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
+wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -295,7 +300,6 @@ ammo_vog-25p		= 5,	0.8
 ammo_vog-25 		= 5,	0.8
 ammo_m208a		    = 6,	0.8
 ammo_flame		    = 8,	1
-ammo_8.6x70_lm		= 6,	0.8
 
 bandage			= 6,	1
 medkit			= 10,	1
@@ -373,7 +377,6 @@ ammo_m209			= 1,	6
 ammo_arbolt			= 1,	6
 ammo_m208a			= 1,	6
 ammo_flame			= 1,	6
-ammo_8.6x70_lm		= 1.5,	6
 
 ;Оружие
 wpn_akm_akm30_ironsight		= 1,	4   	   
@@ -398,6 +401,9 @@ wpn_pb				= 1,	4
 wpn_pkm				= 1,	4
 wpn_ppsh41		= 1,	4
 wpn_rpg7			= 1,	4
+wpn_rpk74_sk1		= 1,	4
+wpn_saiga12c		= 1,	4
+wpn_sayga12k_sk1	= 1,	4
 wpn_sig550			= 1,	4
 wpn_spas12			= 1,	4
 wpn_svu				= 1,	4
