--- a/gamedata/config/misc/trade_merc.ltx
+++ b/gamedata/config/misc/trade_merc.ltx
@@ -119,6 +119,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		;NO TRADE
 wpn_spas12				;NO TRADE
+wpn_saiga12c			;NO TRADE
+wpn_sayga12k_sk1		;NO TRADE
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         ;NO TRADE
@@ -128,12 +130,13 @@ wpn_gauss			    ;NO TRADE
 wpn_awm				    = 0.3,	0.1
 
 ;Пулеметы
+wpn_rpk74_sk1			;NO TRADE
 wpn_pkm				    ;NO TRADE
 
 ;Другое
 wpn_flame			    ;NO TRADE
 wpn_crossbow			= 0.3,	0.1
-wpn_usp9			    ;NO TRADE
+wpn_pb				    ;NO TRADE
 wpn_rpg7				;NO TRADE
 
 ;ADDONS
@@ -244,7 +247,9 @@ wpn_eagle_m1			= 1.1,	0.5
 wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
+wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -257,7 +262,7 @@ grenade_light		= 3,	0.8
 grenade_rgd5		= 5,	1
 wpn_spas12		    = 1,	0.9
 wpn_g36				= 1,	0.9   
-wpn_usp9			= 1,	0.9
+wpn_pb				= 1,	0.9
 wpn_awm		        = 1,	0.7
 
 ammo_12x76_zhekan	= 7,	1
@@ -370,10 +375,13 @@ wpn_groza			= 1,	3
 wpn_m16a1_sk1		= 1,	3
 wpn_mac10			= 1,	3
 wpn_mp5				= 1,	3
-wpn_usp9			= 1,	3
+wpn_pb				= 1,	3
 wpn_pkm				= 1,	3
 wpn_ppsh41		= 1,	3
 wpn_rpg7			= 1,	3
+wpn_rpk74_sk1		= 1,	3
+wpn_saiga12c		= 1,	3
+wpn_sayga12k_sk1	= 1,	3
 wpn_sig550			= 1,	3
 wpn_spas12			= 1,	3
 wpn_svu				= 1,	3
