--- a/gamedata/config/misc/trade_military.ltx
+++ b/gamedata/config/misc/trade_military.ltx
@@ -119,6 +119,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		;NO TRADE
 wpn_spas12				;NO TRADE
+wpn_saiga12c			;NO TRADE
+wpn_sayga12k_sk1		;NO TRADE
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         ;NO TRADE
@@ -128,6 +130,7 @@ wpn_gauss			    ;NO TRADE
 wpn_awm				    ;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			;NO TRADE
 wpn_pkm				    ;NO TRADE
 
 ;Другое
@@ -243,7 +246,9 @@ wpn_eagle_m1			= 1.1,	0.5
 wpn_colt_m1				= 1.1,	0.5
 wpn_mp5_m2				= 1.1,	0.5
 wpn_sig_m2				= 1.1,	0.5
+wpn_saiga12c_m1		    = 1.1,	0.5
 wpn_m_134				= 1.1,	0.5
+wpn_mac10_m1			= 1.1,	0.5
 wpn_vintorez_m1			= 1.1,	0.5
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -388,6 +393,9 @@ wpn_pb				    = 1,	4
 wpn_pkm				    = 1,	3
 wpn_ppsh41			= 1,	4
 wpn_rpg7				= 1,	3
+wpn_rpk74_sk1			= 1,	4
+wpn_saiga12c			= 1,	4
+wpn_sayga12k_sk1	= 1,	4
 wpn_sig550				= 1,	4
 wpn_spas12				= 1,	4
 wpn_svu				    = 1,	4
