--- a/gamedata/config/misc/trade_obmen.ltx
+++ b/gamedata/config/misc/trade_obmen.ltx
@@ -141,6 +141,8 @@ wpn_toz34_short			= 0.0,	0.0
 wpn_toz34				= 0.0,	0.0
 wpn_wincheaster1300		= 0.0,	0.0
 wpn_spas12				= 0.0,	0.0
+wpn_saiga12c			= 0.0,	0.0
+wpn_sayga12k_sk1		= 0.0,	0.0
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.0,	0.0
@@ -150,6 +152,7 @@ wpn_gauss			    = 0.0,	0.0
 wpn_awm				    = 0.0,	0.0
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.0,	0.0
 wpn_pkm				    = 0.0,	0.0
 
 ;Другое
@@ -290,7 +293,9 @@ wpn_eagle_m1			= 0.0,	0.0
 wpn_colt_m1				= 0.0,	0.0
 wpn_mp5_m2				= 0.0,	0.0
 wpn_sig_m2				= 0.0,	0.0
+wpn_saiga12c_m1		    = 0.0,	0.0
 wpn_m_134				= 0.0,	0.0
+wpn_mac10_m1			= 0.0,	0.0
 wpn_vintorez_m1			= 0.0,	0.0
 
 ;------------------------- ПРОДАЖА -----------------------
@@ -398,6 +403,9 @@ wpn_pb				= 0.0,	0.0
 wpn_pkm				= 0.0,	0.0
 wpn_ppsh41		= 0.0,	0.0
 wpn_rpg7			= 0.0,	0.0
+wpn_rpk74_sk1		= 0.0,	0.0
+wpn_saiga12c		= 0.0,	0.0
+wpn_sayga12k_sk1	= 0.0,	0.0
 wpn_sig550			= 0.0,	0.0
 wpn_spas12			= 0.0,	0.0
 wpn_svu				= 0.0,	0.0
