--- a/gamedata/config/misc/trade_semenov.ltx
+++ b/gamedata/config/misc/trade_semenov.ltx
@@ -99,6 +99,8 @@ wpn_toz34_short			;NO TRADE
 wpn_toz34				;NO TRADE
 wpn_wincheaster1300		;NO TRADE
 wpn_spas12				;NO TRADE
+wpn_saiga12c			;NO TRADE
+wpn_sayga12k_sk1		;NO TRADE
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         ;NO TRADE
@@ -108,6 +110,7 @@ wpn_gauss			    = 3.0,	4.0
 wpn_awm				;NO TRADE
 
 ;Пулеметы
+wpn_rpk74_sk1			;NO TRADE
 wpn_pkm				    ;NO TRADE
 
 ;Другое
@@ -225,7 +228,9 @@ wpn_eagle_m1			;NO TRADE
 wpn_colt_m1				;NO TRADE
 wpn_mp5_m2				;NO TRADE
 wpn_sig_m2				;NO TRADE
+wpn_saiga12c_m1		    ;NO TRADE
 wpn_m_134				;NO TRADE
+wpn_mac10_m1			;NO TRADE
 wpn_vintorez_m1			;NO TRADE
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -358,6 +363,9 @@ wpn_pb				;NO TRADE
 wpn_pkm				;NO TRADE
 wpn_ppsh41			;NO TRADE
 wpn_rpg7			;NO TRADE
+wpn_rpk74_sk1		;NO TRADE
+wpn_saiga12c		;NO TRADE
+wpn_sayga12k_sk1	;NO TRADE
 wpn_sig550			;NO TRADE
 wpn_spas12			;NO TRADE
 wpn_svu				;NO TRADE
