--- a/gamedata/config/misc/trade_swamp_doc.ltx
+++ b/gamedata/config/misc/trade_swamp_doc.ltx
@@ -138,6 +138,8 @@ wpn_toz34_short			= 0.3,	0.1
 wpn_toz34				= 0.3,	0.1
 wpn_wincheaster1300		= 0.3,	0.1
 wpn_spas12				= 0.3,	0.1
+wpn_saiga12c			= 0.3,	0.1
+wpn_sayga12k_sk1		= 0.3,	0.1
 
 ;Снайперские винтовки
 wpn_sg550sr_sk1         = 0.3,	0.1
@@ -147,6 +149,7 @@ wpn_gauss			    = 0.3,	0.1
 wpn_awm				    = 0.3,	0.1
 
 ;Пулеметы
+wpn_rpk74_sk1			= 0.3,	0.1
 wpn_pkm				    = 0.3,	0.1
 
 ;Другое
@@ -261,7 +264,9 @@ wpn_eagle_m1			= 1,	0.5
 wpn_colt_m1				= 1,	0.5
 wpn_mp5_m2				= 1,	0.5
 wpn_sig_m2				= 1,	0.5
+wpn_saiga12c_m1		    = 1,	0.5
 wpn_m_134				= 1,	0.5
+wpn_mac10_m1			= 1,	0.5
 wpn_vintorez_m1			= 1,	0.5
 
 ;------------------------- АССОРТИМЕНТ -----------------------
@@ -376,6 +381,9 @@ wpn_pb				= 1,	4
 wpn_pkm				= 1,	4
 wpn_ppsh41		= 1,	4
 wpn_rpg7			= 1,	4
+wpn_rpk74_sk1		= 1,	4
+wpn_saiga12c		= 1,	4
+wpn_sayga12k_sk1	= 1,	4
 wpn_sig550			= 1,	4
 wpn_spas12			= 1,	4
 wpn_svu				= 1,	4
