--- a/gamedata/config/misc/outfit.ltx
+++ b/gamedata/config/misc/outfit.ltx
@@ -60,7 +60,7 @@ inv_grid_height		= 3
 inv_grid_x			= 34
 inv_grid_y			= 12
 full_icon_name		= npc_icon_exo_outfit
-nightvision_sect	= effector_nightvision_grey
+;nightvision_sect	= effector_nightvision_grey
 
 power_loss      = 0.7
 
@@ -786,7 +786,7 @@ inv_grid_height		= 3
 inv_grid_x			= 53
 inv_grid_y			= 6
 full_icon_name		= npc_icon_scientific_outfit
-nightvision_sect	= effector_nightvision_good
+;nightvision_sect	= effector_nightvision_good
 
 power_loss          = 1.8
 
@@ -1822,7 +1822,8 @@ inv_grid_height		= 3
 inv_grid_x			= 53
 inv_grid_y			= 0
 full_icon_name		= npc_icon_ecolog_outfit
-nightvision_sect	= effector_nightvision_good
+;nightvision_sect	= effector_nightvision_good
+nightvision_sect	= effector_nightvision_elite
 
 power_loss      = 1.2
 
