--- a/gamedata/config/creatures/game_relations.ltx
+++ b/gamedata/config/creatures/game_relations.ltx
@@ -20,7 +20,7 @@ goodwill_neutal = 0
 goodwill_friend = 800
 
 ;названия группировок
-communities     = actor, 0, actor_dolg, 1, actor_freedom, 2, stalker, 5, monolith, 6, military, 7, killer, 8, ecolog, 9, dolg, 10, freedom, 11, bandit, 12, zombied, 13, stranger, 14, trader, 15, arena_enemy, 16, actor_zombied, 17, csky, 18, actor_prebandit, 19, quest_stalker, 20, kulg_band, 21, bratstvo_9, 22, kulg_band_2, 23, neutral_military, 24, iskatel, 25, neutral_killer, 26, mil_stalker, 27, gunsmith, 28, guider, 29
+communities     = actor, 0, actor_dolg, 1, actor_freedom, 2, stalker, 5, monolith, 6, military, 7, killer, 8, ecolog, 9, dolg, 10, freedom, 11, bandit, 12, zombied, 13, stranger, 14, trader, 15, arena_enemy, 16, actor_zombied, 17, csky, 18, actor_prebandit, 19, quest_stalker, 20, kulg_band, 21, bratstvo_9, 22, kulg_band_2, 23, neutral_military, 24, iskatel, 25, neutral_killer, 26, mil_stalker, 27, gunsmith, 28, guider, 29, voron_band, 30
 
 
 ; отношение персонажа к актеру (или другому NPC) вычисляется по формуле
@@ -68,7 +68,7 @@ actor_zombied    =    0,    0,    0, -150, -100,-1250,-1250,    0,    0,    0,  
 csky             =    0,    0,    0,    0,-3000,-3000, -500,    0,    0,    0, -500, -500,    0,    0,-3000, -400,  600, -100,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 actor_prebandit  =    0,    0,    0, -200,-3000,-2000, -500, -100, -150, -150,    0,-2000,    0,    0,-3000,    0, -400,    0,    0,    0,    0,    0,    0,    0,    0,-1250,    0,    0
 quest_stalker    =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
-kulg_band        =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+kulg_band        =    0,    0,    0,    0,    -3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 bratstvo_9       =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 kulg_band_2      =-3000,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 neutral_military =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
@@ -77,6 +77,7 @@ neutral_killer   =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,  
 mil_stalker      =    0,  500,    0,    0,-3000, 3000,-1250,  800,  500,    0,-2000,-2000,    0,    0,-1250,    0,    0,-1250,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 gunsmith         =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 guider       	 =    0,    0,  -40,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
+voron_band        =    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0
 ;========================================================================================================================================================================================
 ;                     a     a     a     s     m     m     k     e     d     f     b     z     s     t     a     a     c     a     q     k     b     k     n     i     n     m     g     g
 ;                     c     c     c     t     o     i     i     c     o     r     a     o     t     r     r     c     s     c     u     u     r     u     e     s     e     i     u     u
@@ -142,7 +143,7 @@ actor_zombied    = 0.0
 csky             = 0.2
 actor_prebandit  = 0.0
 quest_stalker    = 0.001
-kulg_band        = 0.4
+kulg_band        = 0.04
 kulg_band_2      = 0.0
 bratstvo_9       = 0.4
 neutral_military = 0.0
@@ -151,6 +152,7 @@ neutral_killer   = 0.0
 mil_stalker 	 = 0.3
 gunsmith         = 0.2
 guider           = 0.2
+voron_band		= 0.0
 ;
 ;очки рейтинга, получаемые за убийство персонажа
 ;с определенным статусом
@@ -241,7 +243,7 @@ max = 30
 [monster_communities]
 ;номера team которые присваиваются соответствующим видам
 ;255 - команда не задается   
-communities = actor, 255, human, 255, arena_monstr, 39, boar, 40, bloodsucker, 41, flesh, 42,  dog, 43, pseudodog, 44, cat, 45, chimera, 46, giant, 47, zombie, 48,  burer, 49, controller, 50, poltergeist, 51, snork, 52, fracture, 53, bird, 54, rat, 55, tushkano, 56, bandit, 57, stalker, 58, monolith, 59, military, 60, killer, 61, dolg, 62, freedom, 63, trader, 64, phantom, 255, snorkfreand, 38, burerfreand, 36, corpse, 37, mobfriend, 35, mobenemy, 34, quest_stalker, 255, kulg_band, 255, iskatel, 255, mil_stalker, 255, gunsmith, 64, guider, 64
+communities = actor, 255, human, 255, arena_monstr, 39, boar, 40, bloodsucker, 41, flesh, 42,  dog, 43, pseudodog, 44, cat, 45, chimera, 46, giant, 47, zombie, 48,  burer, 49, controller, 50, poltergeist, 51, snork, 52, fracture, 53, bird, 54, rat, 55, tushkano, 56, bandit, 57, stalker, 58, monolith, 59, military, 60, killer, 61, dolg, 62, freedom, 63, trader, 64, phantom, 255, snorkfreand, 38, burerfreand, 36, corpse, 37, mobfriend, 35, mobenemy, 34, quest_stalker, 255, kulg_band, 255, iskatel, 255, mil_stalker, 255, gunsmith, 64, guider, 64, mobenemy2, 255
 
 [monster_relations]
 ; [1] друг, [0] нейтрал, [-1] враг, [-2] злейший враг
@@ -259,46 +261,47 @@ communities = actor, 255, human, 255, arena_monstr, 39, boar, 40, bloodsucker, 4
 ;----------     o  a  t  a  e  s  o  o  a  r  n  i  e  e  s  r  r  r  a  n  i  e  i  r  e  l  o  e  o  n  n  s  n  m  e  n  e  e  t  e
 ;----------     r  n  r  r  r  h  g  g  t  a  t  e  r  r  t  k  e  d  t  o  t  r  t  y  r  g  m  r  m  d  d  e  d  y  r  d  l  r  h  r
 ;=====================================================================================================================================
-actor        =  1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2,-2, 0, 0, 0,-1, 1, 1,-1, 0, 0, 0, 0, 0, 1, 0, 0
-human        =  0, 1, 0,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2,-2, 0, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0
-arena_monstr = -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-2, 0, 0
-boar         = -2,-2, 0, 1,-1, 0,-1,-1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-bloodsucker  = -2,-2, 0,-1, 1,-2,-2,-2,-2,-1,-1, 0,-1,-2, 0,-1,-2, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-2, 0, 0
-flesh        = -2,-1, 0, 0,-2, 1,-1,-1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-dog          = -1,-1, 0,-1,-2,-1, 1, 0,-2,-1,-1,-1,-1,-1,-1,-1,-1, 0,-1,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1,-1, 0, 0, 0, 0, 0,-1, 0, 0
-pseudodog    = -2,-1, 0,-1,-2,-1, 0, 1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0,-1,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 1, 1,-1, 0, 0
-cat          = -1,-1, 0,-1,-2,-1,-1,-1, 1,-1,-1,-1,-1,-1,-1,-1,-1, 0,-2,-2,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1,-1, 0, 0, 0, 0, 0,-1, 0, 0
-chimera      = -2,-1, 0,-1,-1,-1,-1,-1,-1, 1, 0, 0,-1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-giant        = -2,-1, 0,-1,-1,-1,-1,-1,-1, 0, 1, 0,-1, 0, 0, 0, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-zombie       = -2,-1, 0, 0, 0, 0,-1, 0,-1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-1, 0, 0
-burer        = -2,-2, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-controller   = -2,-2, 0,-1,-2,-1,-1,-1,-1, 0, 0, 0, 0, 1, 0,-1,-1, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0
-poltergeist  = -2,-1, 0,-1, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0
-snork        = -2,-1, 0,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0
-fracture     = -1,-1, 0,-1,-2,-1,-1,-1,-1,-1, 0, 0,-1,-1, 0, 0, 1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-bird         =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-rat          =  0, 0,-1, 0, 0, 0,-1,-1,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-tushkano     = -2,-2, 0,-1,-1, 0,-1,-1,-1,-1, 0,-1,-1, 0, 0, 0,-1, 0, 0, 1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0
-bandit       = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1, 1,-2,-2,-2, 0,-2, 0, 0,-1,-1,-1,-1,-2, 0, 0, 0, 0,-2, 0, 0
-stalker      =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 1,-2,-2,-2, 0, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0
-monolith     = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2, 1,-2,-2,-2,-2, 0,-1,-1,-1, 1,-2, 0, 0, 0, 0,-2, 0, 0
-military     = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2,-2, 1,-2, 0,-2, 0,-1,-1,-1,-2, 0, 0, 0, 0, 0, 1, 0, 0
-killer       = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1, 0,-2,-2,-2, 1,-2, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0,-2, 0, 0
-dolg         =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2, 0,-2, 1,-2, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0
-freedom      =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2, 0,-2, 1, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0
-trader       =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-phantom      = -1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1,-1,-1
-snorkfreand  =  1,-1, 0,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0
-burerfreand  =  0,-2, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0
-corpse       = -2,-1, 0, 0, 0, 0,-1, 0,-1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1,-2,-2, 1,-2,-2,-2,-2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-1, 0, 0
-mobfriend    =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-mobenemy     = -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-2, 0, 0
-quest_stalker=  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-kulg_band    =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-iskatel      =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-mil_stalker  =  1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2, 1,-2, 1, 0, 0,-1, 1, 1,-1, 0,-2, 0, 0, 0, 0, 0, 0
-gunsmith     =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
-guider       =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 
+actor        =  1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2,-2, 0, 0, 0,-1, 1, 1,-1, 0, 0, 0, 0, 0, 1, 0, 0, 0
+human        =  0, 1, 0,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2,-2, 0, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0, 0
+arena_monstr = -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-2, 0, 0, 0
+boar         = -2,-2, 0, 1,-1, 0,-1,-1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+bloodsucker  = -2,-2, 0,-1, 1,-2,-2,-2,-2,-1,-1, 0,-1,-2, 0,-1,-2, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-2, 0, 0, 0
+flesh        = -2,-1, 0, 0,-2, 1,-1,-1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+dog          = -1,-1, 0,-1,-2,-1, 1, 0,-2,-1,-1,-1,-1,-1,-1,-1,-1, 0,-1,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1,-1, 0, 0, 0, 0, 0,-1, 0, 0, 0
+pseudodog    = -2,-1, 0,-1,-2,-1, 0, 1,-1,-1,-1, 0,-1,-1,-1,-1,-1, 0,-1,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1, 0, 0, 0, 0, 1, 1,-1, 0, 0, 0
+cat          = -1,-1, 0,-1,-2,-1,-1,-1, 1,-1,-1,-1,-1,-1,-1,-1,-1, 0,-2,-2,-2,-2,-2,-2,-2,-2,-2, 0, 0,-1,-1,-1, 0, 0, 0, 0, 0,-1, 0, 0, 0
+chimera      = -2,-1, 0,-1,-1,-1,-1,-1,-1, 1, 0, 0,-1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+giant        = -2,-1, 0,-1,-1,-1,-1,-1,-1, 0, 1, 0,-1, 0, 0, 0, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+zombie       = -2,-1, 0, 0, 0, 0,-1, 0,-1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-1, 0, 0, 0
+burer        = -2,-2, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+controller   = -2,-2, 0,-1,-2,-1,-1,-1,-1, 0, 0, 0, 0, 1, 0,-1,-1, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+poltergeist  = -2,-1, 0,-1, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+snork        = -2,-1, 0,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+fracture     = -1,-1, 0,-1,-2,-1,-1,-1,-1,-1, 0, 0,-1,-1, 0, 0, 1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+bird         =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+rat          =  0, 0,-1, 0, 0, 0,-1,-1,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+tushkano     = -2,-2, 0,-1,-1, 0,-1,-1,-1,-1, 0,-1,-1, 0, 0, 0,-1, 0, 0, 1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0
+bandit       = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1, 1,-2,-2,-2, 0,-2, 0, 0,-1,-1,-1,-1,-2, 0, 0, 0, 0,-2, 0, 0, 0
+stalker      =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 1,-2,-2,-2, 0, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0
+monolith     = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2, 1,-2,-2,-2,-2, 0,-1,-1,-1, 1,-2, 0, 0, 0, 0,-2, 0, 0, 0
+military     = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2,-2,-2, 1,-2, 0,-2, 0,-1,-1,-1,-2, 0, 0, 0, 0, 0, 1, 0, 0, 0
+killer       = -1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1, 0,-2,-2,-2, 1,-2, 0, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0,-2, 0, 0, 0
+dolg         =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2, 0,-2, 1,-2, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 1, 0, 0, 0
+freedom      =  0, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2,-2, 0,-2, 1, 0,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0
+trader       =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+phantom      = -1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1,-1,-1, 0
+snorkfreand  =  1,-1, 0,-1,-1,-1,-1,-1,-1, 0, 0, 0, 0,-1, 0, 1, 0, 0, 0, 0,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0
+burerfreand  =  0,-2, 0,-1,-1,-1,-1,-1,-1,-1, 0, 0, 1, 0, 0, 0,-1, 0, 0,-1,-2,-2,-2,-2,-2,-2,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0
+corpse       = -2,-1, 0, 0, 0, 0,-1, 0,-1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,-1,-2,-2, 1,-2,-2,-2,-2, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,-1, 0, 0, 0
+mobfriend    =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0,-2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+mobenemy     = -2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-2, 0, 0, 0
+quest_stalker=  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -2
+kulg_band    =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+iskatel      =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+mil_stalker  =  1, 1,-2,-1,-2,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 0, 0,-1,-2, 0,-2, 1,-2, 1, 0, 0,-1, 1, 1,-1, 0,-2, 0, 0, 0, 0, 0, 0, 0
+gunsmith     =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+guider       =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,-1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 
+mobenemy2    =  0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -2, 0, 0, 0, 0, 0, 0
 ;=====================================================================================================================================
 ;----------     a  h  a  b  b  f  d  p  c  c  g  z  b  c  p  s  f  b  r  t  b  s  m  m  k  d  f  t  p  s  b  c  m  m  q  k  i
 ;----------     c  u  r  o  l  l  o  s  a  h  i  o  u  o  o  n  r  i  a  u  a  t  o  i  i  o  r  r  h  n  u  o  o  o  u  u  s
