--- a/gamedata/config/creatures/spawn_sections.ltx
+++ b/gamedata/config/creatures/spawn_sections.ltx
@@ -1589,3 +1589,329 @@ spec_rank = veteran
 ;community = stalker
 community = trader
 custom_data = scripts\k01jan\esc_guns_remontnik_logic.ltx
+
+
+
+[kulgband_car]:kulgband_car_device
+visual = physics\vehicles\niva\veh_niva_u_01.ogf 
+radius = 1
+custom_data = scripts\jek@n\kulg_band\kulgband_car.ltx
+
+[kulgband_driver]:quest_stalker		;!усилен
+character_profile = kulgband_driver
+custom_data = scripts\jek@n\kulg_band\kulgband_driver.ltx
+
+[kulgband_looser]:quest_stalker		;!усилен
+character_profile = kulgband_looser
+custom_data = scripts\jek@n\kulg_band\kulgband_looser.ltx
+
+
+
+[kulgband_looser_habar]:shron_bloha
+visual = equipments\item_rukzak
+radius = 1
+custom_data = scripts\jek@n\treasures\kulgband_looser_habar.ltx
+
+
+
+[kulgband_trader]:quest_stalker
+character_profile = kulgband_trader
+custom_data = scripts\jek@n\kulg_band\kulgband_trader.ltx
+
+[kulgband_trader_guard1]:quest_stalker
+character_profile = kulgband_trader_guard1
+custom_data = scripts\jek@n\kulg_band\kulgband_trader_guard1.ltx
+
+[kulgband_trader_guard2]:quest_stalker
+character_profile = kulgband_trader_guard2
+custom_data = scripts\jek@n\kulg_band\kulgband_trader_guard2.ltx
+
+[kulgband_trader_car_body]:quest_stalker
+character_profile = kulgband_trader_car_body
+
+
+[kulgband_trader_car_mob]:m_snork_e
+rank				= 301
+visual				= monsters\snork\snork
+spec_rank			= normal
+species				= snork
+community 			= snork
+icon				= ui_npc_monster_snork
+attack_params		= snork_attack_params_normal
+custom_data = scripts\jek@n\mobs\kulgband_trader_car_mob.ltx
+
+
+
+[dar_farm_assistant]:quest_stalker
+character_profile = dar_farm_assistant
+custom_data = scripts\jek@n\kulg_band\dar_farm_assistant.ltx
+
+[dar_assistant_friend]:quest_stalker
+character_profile = dar_assistant_friend
+
+[dar_assistant_friend_mob]:boar_normal
+custom_data = scripts\jek@n\mobs\dar_assistant_friend_mob.ltx
+
+
+
+[kulgband_scout]:quest_stalker
+character_profile = dar_farm_assistant
+custom_data = scripts\jek@n\kulg_band\kulgband_scout.ltx
+
+[kulgband_bool]:quest_stalker
+character_profile = kulgband_bool
+
+
+
+[mil_monolith_man1]:quest_stalker
+character_profile = mil_monolith_man1
+custom_data = scripts\jek@n\kulg_band\mil_monolith_man1.ltx
+
+[mil_monolith_man2]:quest_stalker
+character_profile = mil_monolith_man2
+custom_data = scripts\jek@n\kulg_band\mil_monolith_man2.ltx
+
+[mil_monolith_man3]:quest_stalker
+character_profile = mil_monolith_man3
+custom_data = scripts\jek@n\kulg_band\mil_monolith_man3.ltx
+
+
+[kulgband_trader2]:quest_stalker
+character_profile = kulgband_trader
+custom_data = scripts\jek@n\kulg_band\kulgband_trader.ltx
+
+
+[val_trader_npc]:quest_stalker
+character_profile = val_stalker_trader_quest
+custom_data = scripts\jek@n\kulg_band\val_trader_npc.ltx
+
+
+[rad_kulgband_assistant]:quest_stalker
+character_profile = dar_farm_assistant
+damage			    = tompson_damage
+custom_data = scripts\jek@n\kulg_band\rad_kulgband_assistant.ltx
+
+
+
+[rad_kulgband_shron_guard1]:quest_stalker
+character_profile = aes_Monolit_specnaz
+custom_data = scripts\jek@n\kulg_band\rad_kulgband_shron_guard.ltx
+
+[rad_kulgband_shron_guard2]:quest_stalker
+character_profile = aes_Monolit_master
+custom_data = scripts\jek@n\kulg_band\rad_kulgband_shron_guard.ltx
+
+[rad_kulgband_shron_guard3]:quest_stalker
+character_profile = aes_Monolit_sniper
+custom_data = scripts\jek@n\kulg_band\rad_kulgband_shron_guard.ltx
+
+
+
+[dar_bridge_kulgband_assist1]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist1.ltx
+
+[dar_bridge_kulgband_assist2]:quest_stalker
+character_profile = kulg_zasada_2_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist2.ltx
+
+
+[dar_bridge_kulgband_man1]:quest_stalker
+character_profile = dar_bridge_kulgband_man1
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_man1.ltx
+
+[dar_bridge_kulgband_man2]:quest_stalker
+character_profile = dar_bridge_kulgband_man2
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_man2.ltx
+
+[dar_bridge_kulgband_man3]:quest_stalker
+character_profile = dar_bridge_kulgband_man3
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_man3.ltx
+
+
+[kulgband_seif_dead_man]:quest_stalker
+character_profile = kulgband_seif_dead_man
+
+
+
+[kulgband_seif_ambush_mob1]:m_controller_normal
+custom_data = scripts\jek@n\mobs\kulgband_seif_ambush_mob.ltx
+
+[kulgband_seif_ambush_mob2]:zombie_normal
+custom_data = scripts\jek@n\mobs\kulgband_seif_ambush_mob.ltx
+
+
+
+[dar_bridge_kulgband_glavar]:quest_stalker
+character_profile = ds_glavar
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_glavar.ltx
+
+[dar_bridge_kulgband_assist3]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist3.ltx
+
+[dar_bridge_kulgband_assist4]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist4.ltx
+
+[dar_bridge_kulgband_assist5]:quest_stalker
+character_profile = kulg_zasada_3_1_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist5.ltx
+
+[dar_bridge_kulgband_assist6]:quest_stalker
+character_profile = kulg_zasada_3_1_boets
+custom_data = scripts\jek@n\kulg_band\dar_bridge_kulgband_assist6.ltx
+
+
+[kulgband_bridge_scout]:quest_stalker
+character_profile = dar_farm_assistant
+custom_data = scripts\jek@n\kulg_band\kulgband_bridge_scout.ltx
+
+
+[kulgband_scout_shron]:shron_bloha
+visual = equipments\item_rukzak
+radius = 1
+custom_data = scripts\jek@n\treasures\kulgband_scout_shron.ltx
+
+
+[city_kulgband_glavar]:quest_stalker
+character_profile = ds_glavar
+damage    = tompson_damage
+custom_data = scripts\jek@n\kulg_band\city_kulgband_glavar.ltx
+
+[city_kulgband_glavar2]:quest_stalker
+character_profile = kulgband_hutor_deadman
+damage    = tompson_damage
+custom_data = scripts\jek@n\kulg_band\city_kulgband_glavar2.ltx
+
+[city_kulgband_glavar3]:quest_stalker
+character_profile = ds_glavar2
+
+
+[city_kulgband_telohr1]:quest_stalker
+character_profile = ds_telohr_1
+custom_data = scripts\jek@n\kulg_band\city_kulgband_telohr1.ltx
+
+[city_kulgband_telohr2]:quest_stalker
+character_profile = ds_telohr_2
+custom_data = scripts\jek@n\kulg_band\city_kulgband_telohr2.ltx
+
+[city_kulgband_shesterka]:quest_stalker
+character_profile = ds_shesterka
+custom_data = scripts\jek@n\kulg_band\city_kulgband_shesterka.ltx
+
+[city_kulgband_patruln]:quest_stalker
+character_profile = ds_patruln
+custom_data = scripts\jek@n\kulg_band\city_kulgband_patruln.ltx
+
+[city_kulgband_assist1]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\city_kulgband_assist1.ltx
+
+[city_kulgband_assist2]:quest_stalker
+character_profile = kulg_zasada_2_boets
+custom_data = scripts\jek@n\kulg_band\city_kulgband_assist2.ltx
+
+
+[kulgband_hutor_deadman]:quest_stalker
+character_profile = kulgband_hutor_deadman
+custom_data = scripts\jek@n\kulg_band\kulgband_hutor_deadman.ltx
+
+
+[kulgband_informer]:quest_stalker
+character_profile = freezer_bandos
+custom_data = scripts\jek@n\kulg_band\kulgband_informer.ltx
+
+[kulgband_informer_assist1]:quest_stalker
+character_profile = kulg_zasada_3_1_boets
+custom_data = scripts\jek@n\kulg_band\kulgband_informer_assist.ltx
+damage    = tompson_damage
+
+[kulgband_informer_assist2]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\kulgband_informer_assist.ltx
+damage    = tompson_damage
+
+[kulgband_informer_assist3]:quest_stalker
+character_profile = kulgband_informer_assist
+custom_data = scripts\jek@n\kulg_band\kulgband_informer_assist2.ltx
+damage    = tompson_damage
+
+
+[kulgband_informer_shron1]:shron_bloha
+visual = equipments\item_rukzak
+radius = 1
+custom_data = scripts\jek@n\treasures\kulgband_informer_shron1.ltx
+
+[kulgband_informer_shron2]:shron_bloha
+visual = equipments\item_rukzak
+radius = 1
+custom_data = scripts\jek@n\treasures\kulgband_informer_shron2.ltx
+
+
+[kulgband_informer_mob]:bloodsucker_normal
+custom_data = scripts\jek@n\mobs\kulgband_informer_mob.ltx
+species		= mobenemy
+
+
+
+[cit_kulgband_monolit1]:quest_stalker
+character_profile = aes_Monolit_specnaz
+custom_data = scripts\jek@n\kulg_band\cit_kulgband_monolit.ltx
+
+[cit_kulgband_monolit2]:quest_stalker
+character_profile = aes_Monolit_master
+damage    = tompson_damage
+custom_data = scripts\jek@n\kulg_band\cit_kulgband_monolit.ltx
+
+[cit_kulgband_monolit3]:quest_stalker
+character_profile = aes_Monolit_sniper
+custom_data = scripts\jek@n\kulg_band\cit_kulgband_monolit.ltx
+
+
+
+[cit_kulgband_mob1]:bloodsucker_normal
+species				= mobenemy2
+custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
+
+[cit_kulgband_mob2]:bloodsucker_strong
+species				= mobenemy2
+custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
+
+
+[cit_kulgband_mob3]:chimera_strong
+species				= mobenemy2
+custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
+
+[cit_kulgband_mob4]:pseudodog_normal
+species				= mobenemy2
+custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
+
+
+[cit_kulgband_mob5]:m_snork_e
+rank				= 301
+visual				= monsters\snork\snork
+spec_rank			= normal
+species				= mobenemy2
+community 			= snork
+icon				= ui_npc_monster_snork
+attack_params		= snork_attack_params_normal
+custom_data = scripts\jek@n\mobs\cit_kulgband_mob.ltx
+
+
+[cit_kulgband_sniper1]:quest_stalker
+character_profile = freezer_bandos
+custom_data = scripts\jek@n\kulg_band\cit_kulgband_sniper.ltx
+
+[cit_kulgband_sniper2]:quest_stalker
+character_profile = kulg_zasada_1_boets
+custom_data = scripts\jek@n\kulg_band\cit_kulgband_sniper.ltx
+
+
+
+
+
+
+
+
+
